# All-Might

./: .gitignore  .gitmodules  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/hooks/: session-start.sh
docs/: concentration-review-2026-06.md  hooks-proposal.md  offline-reference-proposal.md  personalities.md  plan.md  plugin-observability.md  reflect-trajectory-proposal.md  retrieval-surfacing-proposal.md  schedule-proposal.md  team-share.md  workflow.md
docs/daily-learning/: 2026-05-18.md  2026-05-20.md  2026-05-22.md  2026-05-25.md  2026-05-27.md  2026-05-29.md  2026-06-01.md  2026-06-03.md  2026-06-05.md  (+12 more)
examples/: README.md
tests/: test_bridge.py  test_capability_manifest.py  test_claude_bridge.py  test_cli.py  test_clone.py  test_command_body_generic.py  test_compose_command.py  test_compose_downward_symlinks.py  test_config.py  test_corpus_link.py  test_db_ingest.py  test_detroit_smak.py  test_docs_skill.py  test_enrichment.py  test_export_import.py  test_graph_intel.py  test_init_preserves_registry.py  test_init_single_prompt.py  test_journal_schema.py  test_knowledge_mcp.py  test_knowledge_mcp_wiring.py  test_l1_handoff.py  test_l3_auto_ingest.py  test_link_skill.py  test_memory_consolidation.py  test_memory_decay.py  test_memory_episodic.py  test_memory_history.py  test_memory_init.py  test_memory_retrieval.py  test_memory_semantic.py  test_memory_working.py  test_merge.py  test_migrate.py  test_offline_reference.py  test_onboard_skill.py  test_one_for_all.py  test_one_for_all_all_for_one.py  test_opencode_reference.py  test_panorama.py  (+27 more)
(+174 files in other folders)
